--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -3,11 +3,18 @@
     package="com.whiteboxteam.gliese"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <service
+            android:name=".data.sync.application.ApplicationSyncService"
+            android:exported="false"/>
+
         <activity
             android:name=".ui.activity.MainActivity"
             android:label="@string/app_name" >
