--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -9,20 +9,39 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
+
+        <provider
+            android:name=".data.content.provider.ApplicationContentProvider"
+            android:authorities="com.whiteboxteam.gliese.data.content.provider"
+            android:exported="false"/>
+
+        <provider
+            android:name=".data.content.provider.StatisticsContentProvider"
+            android:authorities="com.whiteboxteam.gliese.statistic.content.provider"
+            android:exported="false"/>
 
         <service
             android:name=".data.sync.application.ApplicationSyncService"
             android:exported="false"/>
 
+        <service
+            android:name=".data.sync.image.ImageUploadService"
+            android:exported="false"
+            />
+
+        <activity
+            android:name=".ui.activity.StartAppActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".ui.activity.MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:label="@string/app_name">
         </activity>
     </application>
 
