--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -1,49 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="com.whiteboxteam.gliese"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest package="com.whiteboxteam.gliese"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-
+        android:theme="@style/AppTheme" >
         <provider
             android:name=".data.content.provider.ApplicationContentProvider"
             android:authorities="com.whiteboxteam.gliese.data.content.provider"
-            android:exported="false"/>
-
+            android:exported="false" />
         <provider
             android:name=".data.content.provider.StatisticsContentProvider"
             android:authorities="com.whiteboxteam.gliese.statistic.content.provider"
-            android:exported="false"/>
+            android:exported="false" />
 
         <service
             android:name=".data.sync.application.ApplicationSyncService"
-            android:exported="false"/>
-
+            android:enabled="true"
+            android:exported="false" />
         <service
             android:name=".data.sync.image.ImageUploadService"
-            android:exported="false"
-            />
+            android:enabled="true"
+            android:exported="false" />
+        <service
+            android:name=".data.sync.statistic.StatisticSyncService"
+            android:enabled="true"
+            android:exported="false" />
 
         <activity
             android:name=".ui.activity.StartAppActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.activity.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
         </activity>
     </application>
 
