--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
+        android:name=".GlieseApplication"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
@@ -33,6 +34,10 @@
             android:name=".data.sync.statistic.StatisticSyncService"
             android:enabled="true"
             android:exported="false" />
+        <service
+            android:name=".data.sync.statistic.CrashReportService"
+            android:enabled="true"
+            android:exported="false" />
 
         <activity
             android:name=".ui.activity.StartAppActivity"
@@ -57,6 +62,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+
     </application>
 
 </manifest>
