--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.whiteboxteam.gliese"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+<manifest
+    package="com.whiteboxteam.gliese"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
-    <supports-screens android:requiresSmallestWidthDp="320"/>
+    <supports-screens
+        android:requiresSmallestWidthDp="320"
+        android:largeScreens="true"
+        android:xlargeScreens="true"/>
 
     <application
         android:name=".GlieseApplication"
@@ -15,54 +19,54 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <provider
             android:name=".data.content.provider.ApplicationContentProvider"
             android:authorities="com.whiteboxteam.gliese.data.content.provider"
-            android:exported="false" />
+            android:exported="false"/>
         <provider
             android:name=".data.content.provider.StatisticsContentProvider"
             android:authorities="com.whiteboxteam.gliese.statistic.content.provider"
-            android:exported="false" />
+            android:exported="false"/>
 
         <service
             android:name=".data.sync.application.ApplicationSyncService"
             android:enabled="true"
-            android:exported="false" />
+            android:exported="false"/>
         <service
             android:name=".data.sync.image.ImageUploadService"
             android:enabled="true"
-            android:exported="false" />
+            android:exported="false"/>
         <service
             android:name=".data.sync.statistic.StatisticSyncService"
             android:enabled="true"
-            android:exported="false" />
+            android:exported="false"/>
         <service
             android:name=".data.sync.statistic.CrashReportSyncService"
             android:enabled="true"
-            android:exported="false" />
+            android:exported="false"/>
 
         <activity
             android:name=".ui.activity.StartAppActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
             android:name=".ui.activity.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
         </activity>
 
         <receiver
             android:name=".data.sync.receiver.BootCompleteReceiver"
             android:enabled="true"
             android:exported="true"
-            android:label="BootReceiver" >
+            android:label="BootReceiver">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
 
